// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form matches snapshot 1`] = `
<div>
  <form
    class="sveltejs-forms"
  >
    <div
      class="field"
    >
       
      <input
        id="user.email"
        name="user.email"
        placeholder="Email"
        type="text"
      />
       
    </div>
     
    <div
      class="field"
    >
       
      <select
        id="language"
        name="language"
      >
        <option
          value=""
        />
        <option
          value="svelte"
        >
          Svelte
        </option>
        <option
          value="react"
        >
          React
        </option>
        <option
          value="angular"
        >
          Angular
        </option>
      </select>
       
    </div>
     
    <div
      class="field"
    >
      <input
        id="macos"
        name="os"
        type="checkbox"
        value="macos"
      />
       
      <label
        for="macos"
      >
        macOS
      </label>
      
      <input
        id="linux"
        name="os"
        type="checkbox"
        value="linux"
      />
       
      <label
        for="linux"
      >
        Linux 🐧
      </label>
      
      <input
        id="windows"
        name="os"
        type="checkbox"
        value="windows"
      />
       
      <label
        for="windows"
      >
        Windows
      </label>
      
       
    </div>
     
    <button
      type="submit"
    >
      Sign in
    </button>
  </form>
</div>
`;

exports[`Form onSubmit event returns values, resetForm, setSubmitting 1`] = `
Object {
  "language": "svelte",
  "os": Array [
    "macos",
    "windows",
  ],
  "user": Object {
    "email": "test@user.com",
  },
}
`;

exports[`Form onSubmit event returns values, resetForm, setSubmitting 2`] = `
Object {
  "language": "svelte",
  "os": Array [
    "macos",
    "windows",
  ],
  "user": Object {
    "email": "test@user.com",
  },
}
`;

exports[`Form onSubmit event returns values, resetForm, setSubmitting 3`] = `Object {}`;

exports[`Form onSubmit event returns values, resetForm, setSubmitting 4`] = `
Object {
  "language": true,
  "os": true,
  "user": Object {
    "email": true,
  },
}
`;

exports[`Form onSubmit event returns values, resetForm, setSubmitting 5`] = `
Object {
  "language": "",
  "os": Array [],
  "user": Object {
    "email": "",
  },
}
`;

exports[`Form onSubmit event returns values, resetForm, setSubmitting 6`] = `Object {}`;

exports[`Form onSubmit event returns values, resetForm, setSubmitting 7`] = `
Object {
  "language": false,
  "os": false,
  "user": Object {
    "email": false,
  },
}
`;

exports[`Form shows error message when schema is defined 1`] = `
<div>
  <form
    class="sveltejs-forms"
  >
    <div
      class="field error"
    >
       
      <input
        id="user.email"
        name="user.email"
        placeholder="Email"
        type="text"
      />
       
      <div
        class="message"
      >
        user.email must be a valid email
      </div>
    </div>
     
    <div
      class="field"
    >
       
      <select
        id="language"
        name="language"
      >
        <option
          value=""
        />
        <option
          value="svelte"
        >
          Svelte
        </option>
        <option
          value="react"
        >
          React
        </option>
        <option
          value="angular"
        >
          Angular
        </option>
      </select>
       
    </div>
     
    <div
      class="field"
    >
      <input
        id="macos"
        name="os"
        type="checkbox"
        value="macos"
      />
       
      <label
        for="macos"
      >
        macOS
      </label>
      
      <input
        id="linux"
        name="os"
        type="checkbox"
        value="linux"
      />
       
      <label
        for="linux"
      >
        Linux 🐧
      </label>
      
      <input
        id="windows"
        name="os"
        type="checkbox"
        value="windows"
      />
       
      <label
        for="windows"
      >
        Windows
      </label>
      
       
    </div>
     
    <button
      type="submit"
    >
      Sign in
    </button>
  </form>
</div>
`;
